--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,11 @@
 ﻿# Don’t commit the following directories created by pub.
-build/
-packages/
+build
+packages
+bin/packages
+web/packages
+
+# Dart editor
+.buildlog
 
 # Or the files created by dart2js.
 *.dart.js
